# biggr-python

./: .gitignore  LICENSE  README.md  biggr.py  pyproject.toml
examples/: backtest_data.py  basic.py  pit_vs_restated.py
